@@ -139,24 +139,6 @@ public class HBaseSchemaTable implements KijiSchemaTable {
   private String mConstructorStack = "";
 
   /**
-   * Creates an HTable handle to the schema V5 table.
-   *
-   * @param kijiURI the KijiURI.
-   * @param conf the Hadoop configuration.
-   * @param factory HTableInterface factory.
-   * @return a new interface for the table storing the schemas up until data layout v5.
-   * @throws IOException on I/O error.
-   */
-  public static HTableInterface newSchemaV5Table(
-      KijiURI kijiURI,
-      Configuration conf,
-      HTableInterfaceFactory factory)
-      throws IOException {
-    return factory.create(conf,
-        KijiManagedHBaseTableName.getSchemaV5TableName(kijiURI.getInstance()).toString());
-  }
-
-  /**
    * Creates an HTable handle to the schema hash table.
    *
    * @param kijiURI the KijiURI.
@@ -703,10 +685,6 @@ public class HBaseSchemaTable implements KijiSchemaTable {
     final String idTableName =
         KijiManagedHBaseTableName.getSchemaIdTableName(kijiURI.getInstance()).toString();
     deleteTable(admin, idTableName);
-
-    final String v5TableName =
-        KijiManagedHBaseTableName.getSchemaV5TableName(kijiURI.getInstance()).toString();
-    deleteTable(admin, v5TableName);
   }
 
   /** {@inheritDoc} */
