@@ -3,6 +3,8 @@
                               Kiji Schema Release Notes
 
 Version 1.0.0
+  * SCHEMA-115. KijiManagedHBaseTableName no longer manages names for SchemaV5
+      tables.
   * SCHEMA-287. Suppress slf4j classpath warnings without modifying classpath.
   * SCHEMA-189. Adds KijiBufferedWriter.
   * SCHEMA-106. Move CellSpec to org.kiji.schema.layout and mark as Framework.
